--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   	   <nav>
          <ul>
          	<li class="current"><a href="index.html">Home</a></li>
+         	<li><a href="about.html">About</a></li>
+         	<li><a href="login.html">Login</a></li>
+         	<li><a href="signup.html">Sign Up</a></li>
          </ul>
   	   </nav>
     </div>
