--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
          <ul>
          	<li><a href="index.html">Home</a></li>
          	<li class="current"><a href="about.html">About</a></li>
+         	<li><a href="login.html">Login</a></li>
+         	<li><a href="signup.html">Sign Up</a></li>
          </ul>
   	   </nav>
     </div>
