--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
   	   <nav>
          <ul>
          	<li class="current"><a href="login.html">Login</a></li>
+         	<li><a href="signup.html">Sign Up</a></li>
          </ul>
   	   </nav>
     </div>
