--- a/edit.html
+++ b/edit.html
@@ -16,6 +16,10 @@
        </div>
        <nav>
          <ul>
+            <li><a href="new.html">Write Diary</a></li>
+            <li><a href="show.html">Display Diaries</a></li>
+             <li><a href="profile.html">User Profile</a></li>
+          <li><a href="signout.html">Sign Out!</a></li>
          </ul>
        </nav>
     </div>
