--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,7 @@
                 <li><a href="new.html">Write Diary</a></li>
                 <li><a href="show.html">Display Diaries</a></li>
                 <li class="current"><a href="profile.html">User Profile</a></li>
+                <li><a href="signout.html">Sign Out!</a></li>
          </ul>
   	   </nav>
     </div>
