Update the write diary page with a link to show, user profile and signout pages

--- a/new.html
+++ b/new.html
@@ -17,6 +17,9 @@
   	   <nav>
          <ul>
          	<li class="current"><a href="new.html">Write Diary</a></li>
+             <li><a href="show.html">Display Diaries</a></li>
+             <li><a href="profile.html">User Profile</a></li>
+         	<li><a href="signout.html">Sign Out!</a></li>
          </ul>
   	   </nav>
     </div>
