Remove deprecated method from the Form tag

--- a/edit.html
+++ b/edit.html
@@ -29,7 +29,7 @@
         <div class="header-entry">
             <h3>Edit Diary</h1>
        </div>
-            <form action="show.html" method="POST">
+            <form action="show.html">
                   <div class="textTitle">
                       <label for="title"><strong>Title</strong></label>
                       <input type="text" name="title" placeholder="Title" required>
