--- a/new.html
+++ b/new.html
@@ -30,7 +30,7 @@
             <h3>Welcome to MyDiary</h1>
             <p>What are your thoughts and feelings for today...</p>
        </div>
-            <form action="show.html" method="POST">
+            <form action="show.html">
                   <div class="textTitle">
                       <label for="title"><strong>Title</strong></label>
                       <input type="text" name="title" placeholder="Title" required>
